--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="escolha_um_game">Escolha Um Game</string>
     <string name="quebra_cabeca">Quebra Cabeça</string>
     <string name="quebra_cabeca_slider">Quebra Cabeça Slider</string>
+    <string name="verificar">Verificar</string>
 </resources>
