--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="quebra_cabeca">Quebra Cabeça</string>
     <string name="quebra_cabeca_slider">Quebra Cabeça Slider</string>
     <string name="verificar">Verificar</string>
+    <string name="voltar">Voltar</string>
 </resources>
